wip(docs): fix overflow issue on bottom of page

--- a/docs/styles/scalar.pcss
+++ b/docs/styles/scalar.pcss
@@ -18,6 +18,10 @@
   --color-neutral-7: #fff;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .color-neutral-1 {
   color: var(--color-neutral-1);
 }
